# locursdb

./: .gitignore  Cargo.toml  README.md
benches/: store_benches.rs
src/: api.rs  app.rs  config.rs  distance.rs  embedding.rs  error.rs  id.rs  lib.rs  logging.rs  main.rs  point.rs  store.rs  tui.rs
src/embedding/: client.rs  mod.rs  types.rs
src/ingest/: mod.rs  text.rs
src/vector/: distance.rs  id.rs  mod.rs  point.rs  store.rs
tests/: tests.rs
