[package]
name = "locursdb"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
blake3 = "1.8.5"
dotenvy = "0.15.7"
ordered-float = "5.3.0"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
ulid = "1.2.1"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "store_benches"
harness = false
